[package]
name = "discourse-typst"
authors = ["Your Name <you@example.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/Heinenen/discourse-typst"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
comemo = "0.4.0"
js-sys = "0.3.69"
lazy_static = "1.4.0"
time = "0.3.34"
# time = { version = "0.3.34", features = ["wasm-bindgen"] }
ttf-parser = "0.20.0"
typst = "0.11.0"
typst-svg = "0.11.0"
wasm-bindgen = "0.2"

[profile.release]
opt-level = 'z'
lto = "thin"
