[package]
name = "discourse-typst"
authors = ["Your Name <you@example.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/Heinenen/discourse-typst"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
comemo = "0.4.0"
console_error_panic_hook = "0.1.7"
flate2 = "1.0.28"
js-sys = "0.3.69"
lazy_static = "1.4.0"
tar = "0.4.40"
time = "0.3.34"
ttf-parser = "0.20.0"
typst = "0.11.0"
typst-svg = "0.11.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3.69", features = [
    "console",
    "XmlHttpRequest",
    "XmlHttpRequestResponseType",
] }

[profile.release]
opt-level = 'z'
lto = "thin"
